<resources>
    <string name="app_name">SurveyPWP</string>
    <string name="app_btnPlatform">Go to Questionnaire Platform</string>

    <string name="allQuestionnaire">Questionnaire</string>
    <string name="allQuestions">Questions</string>

    <string name="editQuestionnaire">Edit title or description</string>
    <string name="deleteQuestionnaire">Delete this questionnaire</string>

    <string name="btn_editQuestionnaire">Edit your questionnaire</string>
    <string name="btn_answerPlatform">Go to answer platform</string>
    <string name="btn_createQuestionnaire">Create questionnaire</string>
    <string name="btn_editYourQuestionnaire">Edit questionnaire</string>
    <string name="btn_answerQuestionnaire">Answer questionnaire</string>
    <string name="btn_answerOfUser">See a user\'s answers</string>
    <string name="btn_addNewQuestion">Add new question</string>
    <string name="btn_submitQuestionnaire">Submit questionnaire</string>
    <string name="btn_submitAnswers">Submit Answers</string>
    <string name="btn_goBack">Go Back</string>
    <string name="btn_create">Create</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_answer">Answer</string>

    <string name="hint_questionnaire_title">Title</string>
    <string name="hint_question_title">Title</string>
    <string name="hint_questionnaire_description">Description</string>
    <string name="hint_question_description">Description</string>
    <string name="hint_questionnaire_id">Questionnaire ID</string>
    <string name="hint_answer_username">Username</string>
    <string name="hint_answer_content">Click here to add your answer</string>

    <string name="dialog_editQuestionnaireTitle">Edit questionnaire</string>
    <string name="dialog_editQuestionnaireMessage">Edit your questionnaire\'s title and description.</string>
    <string name="dialog_newQuestionTitle">New question</string>
    <string name="dialog_newQuestionMessage">Enter a title for the question. Description is not mandatory.</string>
    <string name="dialog_editQuestionTitle">Edit question</string>
    <string name="dialog_editQuestionMessage">Edit your question\'s title and description.</string>
    <string name="dialog_deleteQuestionnaireConfirmationTitle">Deleting the questionnaire</string>
    <string name="dialog_deleteQıestionnaireConfirmationMessage">Are you sure to delete this questionnaire? It will
        be removed our system entirely. If there is related questions and answers, they will also be deleted in a way
        unrecoverable!</string>
    <string name="dialog_answerTitle">New answer</string>
</resources>
