<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.FragmentQuestionnaireNew" >

    <ImageView
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_marginStart="@dimen/marginM"
        android:layout_marginEnd="@dimen/marginM"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/questionnaire"/>

    <EditText
        android:id="@+id/et_questionnaireTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_marginStart="@dimen/marginM"
        android:layout_marginEnd="@dimen/marginM"
        android:inputType="text"
        android:hint="@string/hint_questionnaire_title" />

    <EditText
        android:id="@+id/et_questionnaireDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginL"
        android:layout_marginStart="@dimen/marginM"
        android:layout_marginEnd="@dimen/marginM"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="4"
        android:hint="@string/hint_questionnaire_description" />

    <Button
        android:id="@+id/btn_createQuestionnaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginM"
        android:layout_marginStart="@dimen/marginS"
        android:layout_marginEnd="@dimen/marginS"
        android:layout_gravity="center"
        android:text="@string/btn_createQuestionnaire" />

    <TextView
        android:id="@+id/tv_btnEditQuestionnaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_marginStart="@dimen/marginM"
        android:layout_marginEnd="@dimen/marginM"
        android:text="@string/btn_editQuestionnaire"
        android:textColor="@color/textViewBtnColor" />

    <TextView
        android:id="@+id/tv_btnAnswerPlatform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginL"
        android:layout_marginStart="@dimen/marginM"
        android:layout_marginEnd="@dimen/marginM"
        android:text="@string/btn_answerPlatform"
        android:textColor="@color/textViewBtnColor" />

</LinearLayout>