<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.FragmentLoginToAnswer" >

    <ImageView
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_marginStart="@dimen/marginM"
        android:layout_marginEnd="@dimen/marginM"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/questionnaire"/>

    <EditText
        android:id="@+id/et_answerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_marginStart="@dimen/marginM"
        android:layout_marginEnd="@dimen/marginM"
        android:inputType="text"
        android:hint="@string/hint_answer_username" />

    <EditText
        android:id="@+id/et_answerQuestionnaireID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginM"
        android:layout_marginStart="@dimen/marginM"
        android:layout_marginEnd="@dimen/marginM"
        android:inputType="numberDecimal"
        android:hint="@string/hint_questionnaire_id" />

    <Button
        android:id="@+id/btn_answerQuestionnaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginM"
        android:layout_marginStart="@dimen/marginS"
        android:layout_marginEnd="@dimen/marginS"
        android:layout_gravity="center"
        android:text="@string/btn_answerQuestionnaire" />

    <TextView
        android:id="@+id/tv_btnAnswerOfUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_marginStart="@dimen/marginM"
        android:layout_marginEnd="@dimen/marginM"
        android:gravity="center_horizontal"
        android:text="@string/btn_answerOfUser"
        android:textSize="@dimen/platformLoginTextSize"
        android:textColor="@color/textViewBtnColor" />

</LinearLayout>